--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"react": "^16.2.0",
 		"react-dom": "^16.2.0",
 		"react-prop-types": "^0.4.0",
-		"react-router-dom": "^4.2.2"
+		"react-router-dom": "^4.2.2",
+		"react-transition-group": "^2.3.0"
 	},
 	"devDependencies": {
 		"babel-core": "^6.26.0",
