--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"css-loader": "^0.28.11",
 		"extract-text-webpack-plugin": "^4.0.0-beta.0",
 		"file-loader": "^1.1.11",
+		"gh-pages": "^1.1.0",
 		"html-webpack-plugin": "^3.0.7",
 		"pascal-case": "^2.0.1",
 		"style-loader": "^0.20.3",
