--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-	"name": "webpack-for-react",
+	"name": "beertap-monitor",
+	"homepage": "https://alxmal.github.io/beertap-monitorgit",
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
 	"scripts": {
 		"start": "npm run build",
 		"build": "webpack -d && cp src/index.html dist/ && webpack-dev-server",
-		"build:prod": "webpack -p && cp src/index.html dist/"
+		"build:prod": "webpack -p && cp src/index.html dist/",
+		"deploy": "gh-pages -d dist"
 	},
 	"author": "",
 	"license": "ISC",
